[package]
name = "vesc-comm"
version = "0.1.0"
authors = ["Ferdia McKeogh <ferdia@mckeogh.tech>"]
edition = "2018"
keywords = ["embedded", "nostd", "robotics"]
license = "GPL-3.0"
homepage = "https://github.com/chocol4te/vesc-comm"
description = "An embedded Rust library for communicating with VESCs"

[dependencies]
pruefung = { git = "https://github.com/althonos/pruefung.git" }
byteorder = { version = "1.3.1", default-features = false }
nb = "0.1.1"
embedded-hal = "0.2.2"
failure = { version = "0.1.5", default-features = false, features = ["derive"] }
heapless = { version = "0.4.1", features = ["const-fn"] }