[package]
name = "vesc-comm"
version = "0.1.1"
authors = ["Ferdia McKeogh <ferdia@mckeogh.tech>"]
edition = "2018"
keywords = ["nostd", "robotics", "embedded-hal-driver"]
category = "embedded"
license = "MPL-2.0"
homepage = "https://github.com/chocol4te/vesc-comm"
description = "An embedded Rust library for communicating with VESCs"
readme = "README.md"

[dependencies]
byteorder = { version = "1.3.1", default-features = false }
nb = "0.1.1"
embedded-hal = "0.2.2"
failure = { version = "0.1.5", default-features = false, features = ["derive"] }
heapless = { version = "0.6.1", features = ["const-fn"] }
crc16 = "0.4.0"

[dev-dependencies]
serialport = "3.2.0"
