[package]
name = "vesc-comm"
version = "0.2.0"
authors = ["Ferdia McKeogh <ferdia@mckeogh.tech>"]
edition = "2021"
keywords = ["nostd", "robotics", "embedded-hal-driver"]
category = "embedded"
license = "MPL-2.0"
homepage = "https://github.com/chocol4te/vesc-comm"
description = "An embedded Rust library for communicating with VESCs"
readme = "README.md"

[dependencies]
byteorder = { version = "1.4.3", default-features = false }
nb = "1.0.0"
embedded-hal = "1.0.0"
failure = { version = "0.1.8", default-features = false, features = ["derive"] }
heapless = "0.7.16"
crc16 = "0.4.0"

[dev-dependencies]
serialport = "4.2.0"
